# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: own-check.yml  python-package.yml  python.yml
gendiff/: __init__.py  diff.py  generate_diff.py  main.py  parse.py  parser.py  parsing.py
gendiff/formaters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: cli.py  gendiff.py
tests/: output.py  test_diff.py  test_generate_diff.py  test_main.py
tests/fixtures/: output.py
